<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">接受</string>
    <string name="account">账号</string>
    <string name="after_play">播放完成后</string>
    <string name="allWeb">全站</string>
    <string name="all_dynamic">全部动态</string>
    <string name="all_series_title_format">%1$s · 全部</string>
    <string name="allow_vip_colorful_dm">允许会员彩色弹幕</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animation">番剧</string>
    <string name="app_exit">再按一次返回退出应用</string>
    <string name="app_name">MyBili</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audioTrack">音轨</string>
    <string name="audio_">Audio：%s</string>
    <string name="audio_codec_">AudioCodec：%s</string>
    <string name="auto">汽车</string>
    <string name="badge">BADGE</string>
    <string name="back">返回</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="button_check_scan_result">点击查看扫码结果</string>
    <string name="cache_limit">缓存限制</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">取消</string>
    <string name="cartoon">动画</string>
    <string name="change_resolution_need_vip">选择的分辨率需要大会员</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="choose_episode">选集</string>
    <string name="clear_cache">清除缓存</string>
    <string name="risk_control_verify">风控验证</string>
    <string name="clear">清空</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">关闭</string>
    <string name="coin_">%s次投币</string>
    <string name="coin_number_">硬币数：%.0f</string>
    <string name="collection">收藏</string>
    <string name="collection_">已收藏</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_setting">通用设置</string>
    <string name="confirm">确认</string>
    <string name="continuation_play">连续播放视频</string>
    <string name="continue_watch">继续观看</string>
    <string name="dance">舞蹈</string>
    <string name="debug_info">调试信息</string>
    <string name="delete">删除</string>
    <string name="default_audio_track">默认音轨</string>
    <string name="default_play_speed">默认播放速度</string>
    <string name="default_start_page">默认启动页面</string>
    <string name="default_video_quality">默认画质</string>
    <string name="device_info">设备信息</string>
    <string name="dm">弹幕</string>
    <string name="dm_">%s条弹幕</string>
    <string name="dm_allow_bottom">允许底部悬停弹幕</string>
    <string name="dm_allow_top">允许顶部悬停弹幕</string>
    <string name="dm_alpha">弹幕透明度</string>
    <string name="dm_filter_weight">弹幕智能屏蔽等级</string>
    <string name="dm_filter_weight_tip">设得越高弹幕质量越高数量也会越少</string>
    <string name="dm_merge_duplicate">重复弹幕合并</string>
    <string name="dm_show_advanced">高级弹幕和特殊弹幕</string>
    <string name="dm_screen_area">弹幕占屏比</string>
    <string name="dm_setting">弹幕设置</string>
    <string name="dm_speed">弹幕速度</string>
    <string name="dm_switch">弹幕开关</string>
    <string name="dm_text_size">弹幕字体大小</string>
    <string name="documentary">纪录片</string>
    <string name="dynamic">动态</string>
    <string name="dynamic_count_">%d\n动态</string>
    <string name="dynamic_no_following">还没有关注的 UP，先去关注一些吧</string>
    <string name="dynamic_up_empty">这个 UP 暂时还没有投稿动态</string>
    <string name="empty">啥都没有</string>
    <string name="empty_data">没有找到新数据</string>
    <string name="empty_keyword">请输入关键词</string>
    <string name="entainment">娱乐</string>
    <string name="episodes">正片剧集</string>
    <string name="extra_content">扩展内容</string>
    <string name="related_recommend">相关推荐</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="exo_controls_overflow_show_description">Show additional settings</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_playback_speed">Speed</string>
    <string name="exo_controls_previous_description">Previous</string>
    <string name="exo_controls_repeat_all_description">Current mode: Repeat all. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_off_description">Current mode: Repeat none. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_one_description">Current mode: Repeat one. Toggle repeat mode.</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_seek_bar_description">Playback progress</string>
    <string name="exo_controls_settings_description">Settings</string>
    <string name="exo_controls_show">Show player controls</string>
    <string name="exo_controls_shuffle_off_description">Enable shuffle mode</string>
    <string name="exo_controls_shuffle_on_description">Disable shuffle mode</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_time_placeholder">00:00:00</string>
    <string name="exo_controls_vr_description">VR mode</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_paused">Downloads paused</string>
    <string name="exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_role_alternate">Alternate</string>
    <string name="exo_track_role_closed_captions">CC</string>
    <string name="exo_track_role_commentary">Commentary</string>
    <string name="exo_track_role_supplementary">Supplementary</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="exo_track_unknown">Unknown</string>
    <string name="exo_track_unknown_name">Unknown (%1$s)</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fashion">时尚</string>
    <string name="fast_forward">快进</string>
    <string name="favorite_">%s次收藏</string>
    <string name="favorite_added_at">收藏于：%s</string>
    <string name="favorite_folder_empty">暂无收藏夹</string>
    <string name="favorite_folder_content_empty">暂无收藏内容</string>
    <string name="favorite_folder_count_format">%1$d个内容</string>
    <string name="history_empty">暂无历史记录</string>
    <string name="later_watch_empty">暂无稍后观看内容</string>
    <string name="following_animation_empty">暂无追番内容</string>
    <string name="following_series_empty">暂无追剧内容</string>
    <string name="ff_duration">快进快退时间间隔</string>
    <string name="ff_seek_second">点击屏幕快进快退时间间隔</string>
    <string name="film_and_television">影视</string>
    <string name="filter_area">地区</string>
    <string name="filter_order">排序方式</string>
    <string name="filter_pay_type">付费形式</string>
    <string name="filter_publish">出品</string>
    <string name="follower_count_">%d\n粉丝</string>
    <string name="following_count_">%d\n关注</string>
    <string name="friday">周五</string>
    <string name="level_">LV%d</string>
    <string name="monday">周一</string>
    <string name="my_space">我的空间</string>
    <string name="new_series_update">新番更新表</string>
    <string name="recent_update">最近更新</string>
    <string name="saturday">周六</string>
    <string name="sign_out">退出登录</string>
    <string name="sunday">周日</string>
    <string name="thursday">周四</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
</resources>