<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:clickable="true"
    android:focusable="true"
    android:layout_width="@dimen/px500"
    android:layout_height="@dimen/px600">
    <View
        android:background="@drawable/dialog_background"
        android:layout_width="@dimen/px500"
        android:layout_height="@dimen/px470"
        android:layout_marginTop="@dimen/px100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_avatar"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_avatar"
        android:layout_width="@dimen/px200"
        android:layout_height="@dimen/px200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_avatar"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px20"
        android:gravity="center"
        android:text="Nickname"
        android:textColor="@color/textColor"
        android:textSize="@dimen/px40"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_avatar"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/view_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px10"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_vip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/vip_background"
            android:paddingStart="@dimen/px15"
            android:paddingTop="@dimen/px5"
            android:paddingEnd="@dimen/px15"
            android:paddingBottom="@dimen/px5"
            android:text="普通会员"
            android:textSize="@dimen/px20"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px10"
            android:background="@color/red"
            android:paddingStart="@dimen/px15"
            android:paddingEnd="@dimen/px15"
            android:text="@string/level_"
            android:textColor="@color/textColor"
            android:textSize="@dimen/px25"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px10"
        android:text="@string/coin_number_"
        android:textColor="@color/textColor"
        android:textSize="@dimen/px25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_info"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/view_stat"
        android:layout_width="@dimen/px500"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px20"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_coin">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_following"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/following_count_"
            android:textColor="@color/textColor"
            android:textSize="@dimen/px30" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_follower"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/follower_count_"
            android:textColor="@color/textColor"
            android:textSize="@dimen/px30" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_dynamic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dynamic_count_"
            android:textColor="@color/textColor"
            android:textSize="@dimen/px30" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_view_space"
        android:layout_width="@dimen/px250"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px20"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingTop="@dimen/px20"
        android:paddingBottom="@dimen/px20"
        android:text="@string/my_space"
        android:textColor="@color/textColor"
        android:textSize="@dimen/px25"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_stat"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_sign_out"
        android:layout_width="@dimen/px250"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px20"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingTop="@dimen/px20"
        android:paddingBottom="@dimen/px20"
        android:text="@string/sign_out"
        android:textColor="@color/red"
        android:textSize="@dimen/px25"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_view_space"
        app:layout_constraintTop_toBottomOf="@+id/view_stat"/>
</androidx.constraintlayout.widget.ConstraintLayout>
